--- a/capi-flatcar/templates/kubeadm_config_template.yaml
+++ b/capi-flatcar/templates/kubeadm_config_template.yaml
@@ -1,7 +1,7 @@
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
 metadata:
-  name: {{ include "capi-flatcar.name" . }}-worker-a
+  name: {{ include "capi-flatcar.name" . }}-worker
 spec:
   template:
     spec:
@@ -9,7 +9,7 @@ spec:
         nodeRegistration:
           name: ${COREOS_PACKET_HOSTNAME}
           kubeletExtraArgs:
-            cloud-provider: external
+            # cloud-provider: external
             volume-plugin-dir: "/opt/libexec/kubernetes/kubelet-plugins/volume/exec/"
       format: ignition
       ignition:
