--- a/capi-flatcar/templates/kubeadm_config_template.yaml
+++ b/capi-flatcar/templates/kubeadm_config_template.yaml
@@ -1,7 +1,10 @@
+{{- $root := . }}
+{{- range $worker := .Values.workers }}
+---
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
 metadata:
-  name: {{ include "capi-flatcar.name" . }}-worker
+  name: {{ include "capi-flatcar.name" $root }}-{{ $worker.name }}
 spec:
   template:
     spec:
@@ -15,9 +18,10 @@ spec:
       ignition:
         containerLinuxConfig:
           additionalConfig: |
-{{ tpl (.Files.Get "files/ignition.yaml") . | indent 12 }}
+{{ tpl ($root.Files.Get "files/ignition.yaml") $root | indent 12 }}
       preKubeadmCommands:
         - |
           envsubst < /etc/kubeadm.yml > /etc/kubeadm.yml.tmp && mv /etc/kubeadm.yml.tmp /etc/kubeadm.yml
           /opt/bootstrap.sh > /opt/bootstrap.log
           export PATH=$PATH:/opt/bin
+{{- end }}
