--- a/capi-flatcar/templates/cluster.yaml
+++ b/capi-flatcar/templates/cluster.yaml
@@ -11,7 +11,7 @@ spec:
   controlPlaneRef:
     apiVersion: controlplane.cluster.x-k8s.io/v1beta1
     kind: KubeadmControlPlane
-    name: {{ include "capi-flatcar.name" . }}-control-plane
+    name: {{ include "capi-flatcar.name" . }}-controller
   infrastructureRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
     kind: PacketCluster
