--- a/capi-flatcar/templates/packet_machine_template_cp.yaml
+++ b/capi-flatcar/templates/packet_machine_template_cp.yaml
@@ -1,7 +1,7 @@
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: PacketMachineTemplate
 metadata:
-  name: {{ include "capi-flatcar.name" . }}-control-plane
+  name: {{ include "capi-flatcar.name" . }}-controller
 spec:
   template:
     spec:
