--- a/capi-flatcar/templates/kubeadm_config_template.yaml
+++ b/capi-flatcar/templates/kubeadm_config_template.yaml
@@ -4,7 +4,7 @@
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
 metadata:
-  name: {{ include "capi-flatcar.name" $root }}-{{ $worker.name }}
+  name: {{ include "capi-flatcar.name" $root }}-{{ $worker.prefix }}
 spec:
   template:
     spec:
