--- a/capi-flatcar/templates/machine_deployment.yaml
+++ b/capi-flatcar/templates/machine_deployment.yaml
@@ -6,30 +6,30 @@ kind: MachineDeployment
 metadata:
   labels:
     cluster.x-k8s.io/cluster-name: {{ include "capi-flatcar.name" $root }}
-    pool: {{ $worker.name }}
-  name: {{ include "capi-flatcar.name" $root }}-{{ $worker.name }}
+    pool: {{ $worker.prefix }}
+  name: {{ include "capi-flatcar.name" $root }}-{{ $worker.prefix }}
 spec:
   clusterName: {{ include "capi-flatcar.name" $root }}
   replicas: {{ $worker.count }}
   selector:
     matchLabels:
       cluster.x-k8s.io/cluster-name: {{ include "capi-flatcar.name" $root }}
-      pool: {{ $worker.name }}
+      pool: {{ $worker.prefix }}
   template:
     metadata:
       labels:
         cluster.x-k8s.io/cluster-name: {{ include "capi-flatcar.name" $root }}
-        pool: {{ $worker.name }}
+        pool: {{ $worker.prefix }}
     spec:
       bootstrap:
         configRef:
           apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
           kind: KubeadmConfigTemplate
-          name: {{ include "capi-flatcar.name" $root }}-{{ $worker.name }}
+          name: {{ include "capi-flatcar.name" $root }}-{{ $worker.prefix }}
       clusterName: {{ include "capi-flatcar.name" $root }}
       infrastructureRef:
         apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
         kind: PacketMachineTemplate
-        name: {{ include "capi-flatcar.name" $root }}-{{ $worker.name }}
+        name: {{ include "capi-flatcar.name" $root }}-{{ $worker.prefix }}
       version: {{ $root.Values.kubeVersion }}
 {{- end }}
