--- a/capi-flatcar/templates/packet_machine_template_worker.yaml
+++ b/capi-flatcar/templates/packet_machine_template_worker.yaml
@@ -12,5 +12,8 @@ spec:
       # hardwareReservationID: ""
       machineType: {{ $worker.machineType }}
       os: {{ $root.Values.equinixmetal.os }}
+      {{ if eq $root.Values.equinixmetal.os "custom_ipxe" -}}
+      ipxeURL: {{ $root.Values.equinixmetal.ipxeURL }}
+      {{ end -}}
       tags: []
 {{- end }}
