--- a/capi-flatcar/files/ignition.yaml
+++ b/capi-flatcar/files/ignition.yaml
@@ -61,12 +61,19 @@ storage:
           net.ipv4.ip_forward                 = 1
           net.bridge.bridge-nf-call-ip6tables = 1
 
-    # write some scripts to disk so they can be called later
+    # write additional files to disk so they can be used later
     - path: /opt/bootstrap.sh
       mode: 0755
       contents:
         inline: |
 {{ tpl (.Files.Get "files/bootstrap.sh") . | indent 10 }}
+    {{ if .Values.installCRS.cilium -}}
+    - path: /opt/default-ccnp.yaml
+      mode: 0644
+      contents:
+        inline: |
+{{ tpl (.Files.Get "files/default-ccnp.yaml") . | indent 10 }}
+    {{- end }}
 
 systemd:
   units:
